  * Clone image->intensity in CloneImageProperties() (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23569).
  * Split test suite into smaller tests (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23577).
  * Undercolor rectangle was off by one pixel (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23574).

2013-06-05  6.8.5-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-10, SVN revision 12419.

2013-06-02  6.8.5-10 Cristy  <quetzlzacatenango@image...>
  * Improve caption formatting (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23522).

2013-06-01  6.8.5-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-9, SVN revision 12401.

2013-05-30  6.8.5-9 Cristy  <quetzlzacatenango@image...>
  * Caption no longer clips long words (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23504).
  * The lightness intensity is (min(R',G',B')+max(R',G',B'))/2.0 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23517).

2013-05-25  6.8.5-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.5-8, SVN revision 12362.

2013-05-23  6.8.5-8 Glenn Randers-Pehrson <glennrp@image...>
  * Stopped a "-fsanitize-address" warning in the JNG coder.

2013-05-20  6.8.5-8 Cristy  <quetzlzacatenango@image...>
  * The -white-threshold option is symetrical with -black-threshold (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23441);
  * Fix multi-line PNM comments (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23442).
  * The -format option should not automatically append a newline since the
    user can specify a newline in the formatting expression.
  * The -level option is no longer returning a darkened image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23479).
