@@ -111,6 +111,9 @@ struct _BlobInfo
     extent,
     quantum;
 
+  MapMode
+    mode;
+
   MagickBooleanType
     mapped,
     eof;
@@ -2593,6 +2596,7 @@ MagickExport MagickBooleanType OpenBlob(const ImageInfo *image_info,
                           }
                         AttachBlob(image->blob,blob,length);
                         image->blob->mapped=MagickTrue;
+                        image->blob->mode=ReadMode;
                       }
                   }
               }
@@ -3822,6 +3826,7 @@ MagickExport MagickBooleanType SetBlobExtent(Image *image,
             return(MagickFalse);
           image->blob->data=(unsigned char*) MapBlob(fileno(
             image->blob->file_info.file),WriteMode,0,(size_t) extent);
+          image->blob->mode=WriteMode;
           image->blob->extent=(size_t) extent;
           image->blob->length=(size_t) extent;
           (void) SyncBlob(image);
@@ -3907,7 +3912,8 @@ static int SyncBlob(Image *image)
     case BlobStream:
     {
 #if defined(MAGICKCORE_HAVE_MMAP_FILEIO) && defined(MS_SYNC)
-      if (image->blob->mapped != MagickFalse)
+      if ((image->blob->mapped != MagickFalse) &&
+          ((image->blob->mode == WriteMode) || (image->blob->mode == IOMode)))
         status=msync(image->blob->data,image->blob->length,MS_SYNC);
 #endif
       break;
